--- a/Tips_calculator/index.html
+++ b/Tips_calculator/index.html
@@ -8,7 +8,11 @@
 <body>
     <h1>Tip_calculator</h1>
     <div class="container">
-        
+        Bill-amount: <input type="number" id="billAmount" required>
+        Tips-percentage:<input type="number" id="tipsPercentage" required>
+        Tip-amount:<input type="number" id="tipAmount">
+        Total-amount:<input type="number" id="totalAmount">
+        <button class="calculate_btn">Calculate</button>
     </div>
 </body>
 </html>
