feat: added script.js and styles.css then linked to our index.html file.

--- a/Tips_calculator/index.html
+++ b/Tips_calculator/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tip-calculator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Tip_calculator</h1>
@@ -14,5 +15,6 @@
         Total-amount:<input type="number" id="totalAmount">
         <button class="calculate_btn">Calculate</button>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
