feat:finished the html and javascript code.

--- a/Tips_calculator/index.html
+++ b/Tips_calculator/index.html
@@ -9,11 +9,11 @@
 <body>
     <h1>Tip_calculator</h1>
     <div class="container">
-        Bill-amount: <input type="number" id="billAmount" required>
-        Tips-percentage:<input type="number" id="tipsPercentage" required>
+        Bill-amount: <input type="number" id="billAmount">
+        Tips-percentage:<input type="number" id="tipsPercentage">
         Tip-amount:<input type="number" id="tipAmount">
         Total-amount:<input type="number" id="totalAmount">
-        <button class="calculate_btn">Calculate</button>
+        <button id="calculate_btn">Calculate</button>
     </div>
     <script src="script.js"></script>
 </body>
